# gpu-algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
includes/: add.h  linalg.hpp
src/: linalg.cpp
